--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         android:layout_height="match_parent"
         app:menu="@menu/nav_drawer_menu"
         android:layout_gravity="start"
+        app:headerLayout="@layout/navigation_header"
         />
 
 </androidx.drawerlayout.widget.DrawerLayout>
