--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/google_sign_in_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -47,9 +47,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Email Sign In"
-        app:layout_constraintEnd_toEndOf="@+id/button"
-        app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintEnd_toEndOf="@+id/google_sign_in_btn"
+        app:layout_constraintStart_toStartOf="@+id/google_sign_in_btn"
+        app:layout_constraintTop_toBottomOf="@+id/google_sign_in_btn" />
 
 
 
