--- a/app/src/main/res/drawable/backgroung_splashscreen.xml
+++ b/app/src/main/res/drawable/backgroung_splashscreen.xml
@@ -5,9 +5,13 @@
         <color android:color="@color/white"/>
     </item>
     <item android:drawable="@drawable/logo_splash_scree"
-            android:width="200dp"
-            android:height="200dp"
-            android:gravity="center">
+        android:top="0dp"
+        android:bottom="0dp"
+        android:left="0dp"
+        android:right="0dp"
+        android:width="192dp"
+        android:height="192dp"
+        android:gravity="center">
     </item>
 
 </layer-list>
