--- a/app/src/main/res/drawable/custom_button.xml
+++ b/app/src/main/res/drawable/custom_button.xml
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <corners android:radius="1000dp"/>
-    <solid android:color="#2F7FB9"/>
+    <item android:left="5dp" android:top="5dp">
+        <shape >
+            <solid android:color="@android:color/darker_gray"/>
+            <corners android:radius="100dp"/>
+        </shape>
+    </item>
 
-</shape>
+    <item android:bottom="2dp" android:right="2dp">
+        <shape>
+            <solid android:color="@android:color/white"/>
+            <corners android:radius="100dp"/>
+        </shape>
+    </item>
+
+</layer-list>
