--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,12 +7,18 @@
     android:background="@color/white"
     tools:context=".LoginActivity">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="214dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="70dp"
-        android:src="@drawable/login_title"
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="109dp"
+        android:layout_marginRight="109dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="110dp"
+        android:text="VIBSEY"
+        android:textSize="36sp"
+        android:gravity="center"
+        android:fontFamily="@font/rock_salt"
+        android:textColor="#2F80B8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,23 +26,23 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="219dp"
-        android:layout_height="193dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         android:src="@drawable/login_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/title"
         app:layout_constraintVertical_bias="0.026"
         tools:ignore="MissingConstraints" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/raleway"
         android:text="Email"
-        android:fontFamily="@font/reemkufi_regular"
         android:textColor="@android:color/darker_gray"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
         app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
         tools:ignore="MissingConstraints" />
@@ -46,9 +52,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Password"
-        android:fontFamily="@font/reemkufi_regular"
+        android:fontFamily="@font/raleway"
         android:textColor="@android:color/darker_gray"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
         app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
         tools:ignore="MissingConstraints" />
@@ -58,9 +64,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Forgot Password ?"
-        android:fontFamily="@font/reemkufi_regular"
+        android:fontFamily="@font/raleway"
         android:textColor="#2F80B8"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
         tools:ignore="MissingConstraints" />
@@ -69,33 +75,34 @@
         android:id="@+id/editTextTextPersonName"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:backgroundTint="#2F80B8"
+        android:layout_marginLeft="39dp"
+        android:layout_marginTop="78dp"
+        android:layout_marginRight="39dp"
 
+        android:backgroundTint="#2F80B8"
         android:ems="10"
-        android:fontFamily="@font/reemkufi_regular"
+        android:fontFamily="@font/raleway"
         android:hint="Enter Email"
         android:inputType="textEmailAddress"
         android:textCursorDrawable="@drawable/cursor"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.205" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/editTextTextPassword"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginLeft="50dp"
+        android:layout_marginLeft="39dp"
         android:layout_marginTop="40dp"
-        android:layout_marginRight="50dp"
+        android:layout_marginRight="39dp"
         android:backgroundTint="#2F80B8"
         android:ems="10"
-        android:fontFamily="@font/reemkufi_regular"
+        android:fontFamily="@font/raleway"
         android:hint="Enter Password"
         android:inputType="textPassword"
         android:textCursorDrawable="@drawable/cursor"
@@ -108,16 +115,18 @@
         android:id="@+id/button2"
         android:layout_width="140dp"
         android:layout_height="43dp"
-        android:fontFamily="@font/reemkufi_regular"
+        android:layout_marginTop="68dp"
         android:background="@drawable/button_background"
+        android:fontFamily="@font/reemkufi_regular"
         android:text="Login"
         android:textAllCaps="false"
-        android:textSize="16sp"
         android:textColor="@color/white"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
