--- a/app/src/main/res/drawable/backgroung_splashscreen.xml
+++ b/app/src/main/res/drawable/backgroung_splashscreen.xml
@@ -4,7 +4,7 @@
     <item>
         <color android:color="@color/white"/>
     </item>
-    <item android:drawable="@drawable/user"
+    <item android:drawable="@drawable/logo"
         android:top="0dp"
         android:bottom="0dp"
         android:left="0dp"
